Updated section name

--- a/common/navyo.html
+++ b/common/navyo.html
@@ -30,7 +30,7 @@
 		</ul>
 	</li>
 	<li><a href="artists.html">Artists</a></li>
-	<li style="background-color:white"><a href="rickrubin.html" style="color: black">Rick Rubin Tweets</a></li>
+	<li style="background-color:white"><a href="rickrubin.html" style="color: black">Rick Rubin Quotes</a></li>
 </ul>
 	
 	<!-- Dropdown and Current Page link to '#' -->
