--- a/rickrubin.html
+++ b/rickrubin.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		
-		<title>Rick Rubin Tweets - Re-Nova World</title>
+		<title>Rick Rubin Quotes - Re-Nova World</title>
 		
 		<!-- Meta -->
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="robots" content="noindex">
 		<meta name="googlebot" content="noindex">
-		<meta name="description" content="Error 404 - Page not found" />
+		<meta name="description" content="Rick Rubin Quotes - Re-Nova World" />
 		<meta name="keywords" content="error, 404" />
 		<link rel="stylesheet" href="css/style.css" />
 
@@ -38,7 +38,7 @@
 				<!-- Inner -->
 					<div class="inner">
 						<header>
-							<h1><a href="#" id="logo">Rick Rubin Tweets</a></h1>
+							<h1><a href="#" id="logo">Rick Rubin Quotes</a></h1>
 						</header>
 					</div>
 				
@@ -76,7 +76,7 @@
 									</ul>
 								</li>
 								<li><a href="artists.html">Artists</a></li>
-								<li style="background-color:white"><a href="rickrubin.html" style="color: black">Rick Rubin Tweets</a></li>
+								<li style="background-color:white"><a href="rickrubin.html" style="color: black">Rick Rubin Quotes</a></li>
 							</ul>
 								
 								<!-- Dropdown and Current Page link to '#' -->
