--- a/rickrubin.html
+++ b/rickrubin.html
@@ -128,11 +128,18 @@
 							<p>
 								We are a huge fan of the great <a href="https://twitter.com/RickRubin" target="_blank">Rick Rubin</a> and admire all the work that he has done. He has been inspiring us almost every day with his wisdom through his tweets that we have saved over time.
 							</p>
+
 							<div height="400px" width="400px"><center><img id="rickImageHolder" height="400px" width="400px"></center></div>
+
 							<button class="button" style="background-color:#3a86b3" onclick="getRandomTweetImage()">Load New Quote</button>
 							<p>
 								We hope that you fill find them as helpful as we do. We do not own the rights to these images and they are taken from Rick's Twitter.
 							</p>
+							<p>
+								You can also install the chrome extension to get these quotes directly from your browser address bar (it is also compatible with Microsoft Edge).
+							</p>
+							<button class="button" style="background-color:#3a86b3"><a href="https://chrome.google.com/webstore/detail/rick-rubin-quotes/joejchfomjdaofmfomncpjmjaienfdbi" target="_blank">Install Chrome Extension</a>
+							</button>
 							
 						</header>
 					</article>
