Updated bitly link

--- a/rickrubin.html
+++ b/rickrubin.html
@@ -138,7 +138,7 @@
 							<p>
 								You can also install the chrome extension to get these quotes directly from your browser address bar (it is also compatible with Microsoft Edge).
 							</p>
-							<button class="button" style="background-color:#3a86b3"><a href="https://chrome.google.com/webstore/detail/rick-rubin-quotes/joejchfomjdaofmfomncpjmjaienfdbi" target="_blank">Install Chrome Extension</a>
+							<button class="button" style="background-color:#3a86b3"><a href="http://bit.ly/RickRubinQuotesChromeExtension" target="_blank">Install Chrome Extension</a>
 							</button>
 							
 						</header>
