--- a/rickrubin.html
+++ b/rickrubin.html
@@ -136,6 +136,12 @@
 								We hope that you fill find them as helpful as we do. We do not own the rights to these images and they are taken from Rick's Twitter.
 							</p>
 							<p>
+								<i>Hi Rick, if you're reading this, I hope you approve of it. I have reached out to you on <a href="https://twitter.com/pmishraofficial/status/1366466114180444161" target="_blank">Twitter</a> for the same. :)
+								<br>
+								- <a href="mailto:prashant@renovaworld.com">Prashant Mishra</a>
+								</i>
+							</p>
+							<p>
 								You can also install the chrome extension to get these quotes directly from your browser address bar (it is also compatible with Microsoft Edge).
 							</p>
 							<button class="button" style="background-color:#3a86b3"><a href="http://bit.ly/RickRubinQuotesChromeExtension" target="_blank">Install Chrome Extension</a>
